# probable-potato

./: .dockerignore  .gitignore  .gitlab-ci-simple.yml  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  main.cpp  message_bus_diagram.md  swarm-app  test_main.cpp
.github/workflows/: ci-simple.yml  ci.yml
docker/: Dockerfile  Dockerfile.api  Dockerfile.core  Dockerfile.health-monitor  Dockerfile.http-server  README.md  docker-compose.swarm.yml  docker-compose.yml
docs/: CI_CD.md  DOCUMENTATION_SUMMARY.md  README.md  mainpage.dox
include/: server.h
include/core/: message_bus.h  module.h  module_manager.h
include/modules/: api_module.h  health_monitor_module.h  http_server_module.h
scripts/: build-modules.sh  deploy.sh  generate_docs.sh  install_dependencies.sh  install_zeromq.sh  run_tests.sh
src/: main.cpp
src/core/: message_bus.cpp  module_manager.cpp
src/modules/api/: api_module.cpp
src/modules/health-monitor/: health_monitor_module.cpp  health_monitor_standalone.cpp
src/modules/http-server/: http_server_module.cpp  http_server_standalone.cpp
src/standalone/: api_main.cpp  core_main.cpp  health_monitor_main.cpp  http_server_main.cpp
tests/: README.md  test_api_module.cpp  test_individual_standalone.cpp  test_main.cpp  test_standalone_apps.cpp  test_swarm_integration.cpp  test_zeromq_message_bus.cpp
